fix btn alignment

--- a/css/content/buttons.scss
+++ b/css/content/buttons.scss
@@ -21,7 +21,7 @@
 	width: 100%;
 	
 	@media(min-width: $tablet) {
-		margin: 50px auto 10px 250px;
+		// margin: 50px auto 10px 25px;
 		width: 250px;
 	}
 
