--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@
   width: 100%; }
   @media (min-width: 768px) {
     .btn-contact {
-      margin: 50px auto 10px 250px;
       width: 250px; } }
   @media (min-width: 992px) {
     .btn-contact {
@@ -340,7 +339,7 @@ p {
 
 .section_info {
   padding: 5%; }
-  @media (min-width: 425px) {
+  @media (min-width: 425px) and (max-width: 768px) {
     .section_info {
       padding: 10%; } }
   @media (min-width: 768px) and (max-width: 1024px) {
